--- a/src/main/webapp/PasswordReset.xhtml
+++ b/src/main/webapp/PasswordReset.xhtml
@@ -29,13 +29,14 @@
                     <p:growl id="msg" showDetail="true" life="2000"/>
                     <h:form >
                         <h:panelGrid columns="3">
-                            <p:outputLabel value="Enter Your rename"/>
+                            <p:outputLabel value="Enter Your username"/>
                             <p:inputText id="user" required="true" requiredMessage="You must enter a username" value="#{passwordreset.username}"/> 
                             <p:commandButton  actionListener="#{passwordreset.resetPassword()}" value="Reset Passsword" update=":msg" />
                             <p:message for="user" display="message"/>
                         </h:panelGrid>
                     </h:form >
 
+                    <div align="center"> <p><b> <a href="home.jsf">Go Back to Login Page</a></b></p></div>
 
                     <noscript>   <div>   
                             <h3 style="color: red;">For full functionality of this page it is necessary to enable JavaScript. Here are the 
