--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -57,7 +57,7 @@
 
                         </h:panelGrid>
                         <div  style="padding: 0.4rem">
-                            <h:outputLink  id="reset" value="PasswordReset.jsf" target="_blank" onclick="PF('myDialogVar').show()" style="color: blue;text-decoration: none;"> 
+                            <h:outputLink  id="reset" value="PasswordReset.jsf" onclick="PF('myDialogVar').show()" style="color: blue;text-decoration: none;"> 
                                 Forgot Password ?
                             </h:outputLink>
                         </div>
