--- a/src/main/webapp/rightnav.xhtml
+++ b/src/main/webapp/rightnav.xhtml
@@ -69,7 +69,7 @@
                 <p:panelMenu style="border: none !important; " > 
 
                     <p:submenu label="Manage User Details" expanded="true">
-                        <p:menuitem rendered="#{userScroller.amIResellersUser()}" value="Manage Group "
+                        <p:menuitem value="Manage Group "
                                     actionListener="#{userInfo.viewgroupuser()}" 
                                     ajax="false"  style="background-image: url('#{resource['images/managegroup.png']}');
                                     background-size: 1rem 1rem;
